2008-04-05  Reto Zimmermann  <reto@gnu.org>

	* progmodes/vhdl-mode.el (vhdl-mode-map-init):
	Replace C-c[a-zA-Z] key bindings.

2008-04-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/hideif.el (hif-token-alist): New var.
	(hif-token-regexp, hif-tokenize): Use it.
	(hif-mathify-binop): New macro.
	(hif-plus, hif-minus, hif-notequal, hif-greater, hif-less)
	(hif-greater-equal, hif-less-equal): Use it.
	(hif-logior, hif-logand): New functions.
	(hif-math): Accept | and & as well.

	* progmodes/etags.el: Fix problem with completion for buffer-local
	tables.  Reported by Radey Shouman <shouman@comcast.net>.
	(tags-complete-tag): Remove.
	(tags-lazy-completion-table): New function to replace it.
	(find-tag-tag, complete-tag): Update users.

2008-04-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-rcs.el (vc-rcs-dir-status):
	* vc-sccs.el (vc-sccs-dir-status): New function.

	* outline.el (outline-mode-menu-bar-map):
	* term.el (terminal-signal-menu): Add :help.

	* net/eudc.el (eudc-mode-map): Declare and define in one step.
	(eudc-tail-menu, eudc-server-menu, eudc-tools-menu): Add :help.

	* emacs-lisp/re-builder.el (reb-mode-map):
	* textmodes/nroff-mode.el (nroff-mode-map): Add menus.

	* diff-mode.el (diff-file-junk-re): Recognize the git format for
	new files, deleted files and for changing permissions.
	(diff-mode): Set beginning-of-defun-function and
	end-of-defun-function.

	* vc-bzr.el (vc-bzr-state): Use when instead of if.

	* vc.el (vc-default-status-fileinfo-extra): New function.
	(vc-status-mark-buffer-changed): Use it.
	(vc-update-vc-status-buffer): Allow for partial updates.

2008-04-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/tramp.el (after-init-hook): Don't wrap a lambda around
	tramp-register-completion-file-name-handler.

	* subr.el (keymap-canonicalize): New function.
	* mouse.el (mouse-menu-non-singleton): Use it.
	(mouse-major-mode-menu): Remove hack made unnecessary.
